# Musically

./: .gitignore  README.md  app.py  pyproject.toml  similarity.pkl
static/scripts/: displayMusic.js  dropdown.js  loadHints.js
static/styles/: dropdown.css  dropdown.css.map  dropdown.scss  style.css  style.css.map  style.scss
templates/: index.html
