[tool.poetry]
name = "new"
version = "0.1.0"
description = ""
authors = ["Dhruva <rdhruva12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
spotipy = "^2.23.0"
requests = "^2.31.0"
pandas = "^2.1.3"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
